infra/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ship
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "32m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.ship.elmundi.com
        - app.ship.elmundi.com
      secretName: ship-tls
  rules:
    - host: api.ship.elmundi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ship-server
                port:
                  number: 80
    - host: app.ship.elmundi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ship-console
                port:
                  number: 80
